# lidar_intensity_calib

./: .gitignore  CMakeLists.txt  CMakeLists.txt.ros  calib.txt  package.xml  raw.txt
config/: config.rviz  config.yaml
include/intensity_calibration/: calibrator.hpp  common.h  kumo_algorithms.h  params.hpp
include/intensity_calibration/model/: beam_model.hpp  mesurement.h
include/intensity_calibration/ros_interface/: common_ros.h
old/: calibrator.hpp
old/model/: cell_model.h  mesurement.h
scripts/: plot_calib.py  test_mapping.py  view_pcd.py  view_realtime_pointcloud.py  view_use_pclros.py
src/: calibrator.cpp  calibrator.hpp  main.cpp  params.hpp  ros_params.cpp
src/model/: beam_model.cpp  beam_model.h  cell_model.cpp
tools/: downsample.cpp
